* added ability to send and receive note files
* added auto-backup to SD Card preference
* made First Note translatable
* moved search function to main activity (allowing two-pane landscape view in results)
* added option to show deleted notes in list
* added ability to import plain text
* added file picker to import plain text and note files from within Tomdroid
* fixed bug lp:1039703 Tomdroid crashes when rotating the device during synchronisation
* fixed bug lp:1039824 Crash when rotate on Revert All
* fixed bug lp:1039814 Crash on Backup Notes
* fixed bug lp:1039671 Crash when the server URL that includes "illegal characters"
* fixed bug lp:1040333 Crash on Revert
* fixed bug lp:1040338 Crash on Cancel
* fixed bug lp:1040389 Share/Send from chrome or play crash
* fixed bug lp:1040551 Tomdroid two-way sync to SD card messes up titles
* fixed bug lp:1041792 Error is occured on text decoration in beta Edit

-------------------------------------------------------------------------------
Tomdroid 0.7.1 beta - "Fast paced" released on 2012-08-21

* Actionbar for all versions of Android
* Converted format bar to sliding drawer
* Added progress bar and toast notifications to preferences
* Cosmetic improvements and bug fixes with conflict resolution
* Added cancel button to sync
* Fixed revert all for deleted notes
* Added routine to avoid full sync if server revision is old (only push changed notes)
* Set note content entry type to "sentence caps"
* Usability and cosmetic improvements (lp:1038118, lp:1038352)
* fixed bug lp:1038115 (beta) do not scroll list to top after deleting a note
* fixed bug lp:1038119 (beta) syncing is not smart :)
* fixed bug lp:1038352 tapping on blank area should go to end of line
* fixed bug lp:1038769 Typo in the string #41
* fixed bug lp:1038968 NullPointerException on SD Card sync with notes causing parse error

-------------------------------------------------------------------------------