@@ -244,26 +244,38 @@ public class ViewNote extends ActionBarActivity {
 
 		// add links to stuff that is understood by Android except phone numbers because it's too aggressive
 		// TODO this is SLOWWWW!!!!
-		Linkify.addLinks(content, Linkify.EMAIL_ADDRESSES|Linkify.WEB_URLS|Linkify.MAP_ADDRESSES);
+		int linkFlags = 0;
+		
+		if(Preferences.getBoolean(Preferences.Key.LINK_EMAILS))
+			linkFlags |= Linkify.EMAIL_ADDRESSES;
+		if(Preferences.getBoolean(Preferences.Key.LINK_URLS))
+			linkFlags |= Linkify.WEB_URLS;
+		if(Preferences.getBoolean(Preferences.Key.LINK_ADDRESSES))
+			linkFlags |= Linkify.MAP_ADDRESSES;
+		
+		Linkify.addLinks(content, linkFlags);
 
 		// Custom phone number linkifier (fixes lp:512204)
-		Linkify.addLinks(content, LinkifyPhone.PHONE_PATTERN, "tel:", LinkifyPhone.sPhoneNumberMatchFilter, Linkify.sPhoneNumberTransformFilter);
+		if(Preferences.getBoolean(Preferences.Key.LINK_PHONES))
+			Linkify.addLinks(content, LinkifyPhone.PHONE_PATTERN, "tel:", LinkifyPhone.sPhoneNumberMatchFilter, Linkify.sPhoneNumberTransformFilter);
 
 		// This will create a link every time a note title is found in the text.
 		// The pattern contains a very dumb (title1)|(title2) escaped correctly
 		// Then we transform the url from the note name to the note id to avoid characters that mess up with the URI (ex: ?)
-		Pattern pattern = NoteManager.buildNoteLinkifyPattern(this,note.getTitle());
-
-		if(pattern != null) {
-			Linkify.addLinks(
-				content,
-				pattern,
-				Tomdroid.CONTENT_URI+"/",
-				noteLinkMatchFilter,
-				noteTitleTransformFilter
-			);
-
-			content.setMovementMethod(LinkMovementMethod.getInstance());
+		if(Preferences.getBoolean(Preferences.Key.LINK_TITLES)) {
+			Pattern pattern = NoteManager.buildNoteLinkifyPattern(this, note.getTitle());
+	
+			if(pattern != null) {
+				Linkify.addLinks(
+					content,
+					pattern,
+					Tomdroid.CONTENT_URI+"/",
+					noteLinkMatchFilter,
+					noteTitleTransformFilter
+				);
+	
+				// content.setMovementMethod(LinkMovementMethod.getInstance());
+			}
 		}
 		title.setText((CharSequence) note.getTitle());
 	}
