@@ -38,6 +38,11 @@ public class Preferences {
 		SD_LOCATION ("sd_location", "tomdroid"),
 		INCLUDE_NOTE_TEMPLATES("include_note_templates", false),
 		INCLUDE_DELETED_NOTES("include_deleted_notes", false),
+		LINK_TITLES("link_titles", true),
+		LINK_URLS("link_urls", true),
+		LINK_EMAILS("link_emails", true),
+		LINK_PHONES("link_phones", true),
+		LINK_ADDRESSES("link_addresses", true),
 		DEL_ALL_NOTES("del_all_notes", ""),
 		DEL_REMOTE_NOTES("del_remote_notes", ""),
 		BACKUP_NOTES("backup_notes", ""),
