@@ -23,6 +23,7 @@ Tomdroid <version-code> - "<version-name>" released on <release-date>
 * added option to show deleted notes in list
 * added ability to import plain text
 * added file picker to import plain text and note files from within Tomdroid
+* added options to turn off hyperlink creation
 * fixed bug lp:1039703 Tomdroid crashes when rotating the device during synchronisation
 * fixed bug lp:1039824 Crash when rotate on Revert All
 * fixed bug lp:1039814 Crash on Backup Notes
